--- a/log.html
+++ b/log.html
@@ -5,15 +5,17 @@
 
 <head>
           <meta charset='utf-8'>
-          <title>LoGin</title>
+          <title>LoGiN</title>
           <link rel='stylesheet' type='text/css' media='screen' href='log.css'>
           <script src='log.js'></script>
 </head>
 
 <body>
           <h2>Entre neste "spray" de web</h2>
-          
-          <a href="index.html"> pag princial </a> 
 
-</body>
+          <a href="index.html"> PaG PrInCiPaL </a> 
+
+         <br><a href="cad.html"> CaDaStRaR </a> 
+
+</body>   
 </html>
