--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
           <h1> Arte nas cinzas </h1>
 
-          <a href="cad.html"> Junte-se a nós </a> <br>
+          <a href="cad.html"> InScReVa-Se </a> <br>
           <br>
-          <a href="log.html"> inscreva-se </a> 
+          <a href="log.html"> LoGiN </a> 
 
 </body>
 </html>
