--- a/cad.html
+++ b/cad.html
@@ -42,7 +42,8 @@
                     <label for="terms"> TeRmO</label>
                     <input type="checkbox" name="terms" id="terms" required>
 
-                    <input type="button" value="Salvar" onclick="cadastrar()">
+                    <label for="cadastrar"></label>
+                    <input type="button" value="cadastrar" onclick="cadastrar()">
           </form>
 
           <br><a href="index.html"> PaG PrInCiPaL </a> 
