--- a/cad.html
+++ b/cad.html
@@ -5,7 +5,7 @@
 <head>
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <title>CaDaStRO</title>
+          <title>Cadastro</title>
 
           <link rel="stylesheet" type="text/css" media="screen" href="cad.css">    <!--eu-->
           <script src="cad.js"></script>                                          <!--eu-->
@@ -15,7 +15,7 @@
           <h2> Receba informações sobre o mundo do Grafite </h2>
 
           
-</body>
+
 
           <form>
 
@@ -24,28 +24,29 @@
                      placeholder mostra o nome do conteúdo quando este estiver vazio, ao iniciar a digitação o nome desaparece
                      required mostra que é campo obrigatório-->
 
-                    <label for="name"> NoMe</label>
-                    <input type="text" name="name" id="name" placeholder="Nome" required> 
+                    <label for="name"> Nome</label>
+                    <input type="text" name="name" id="name" placeholder="Nome"/> 
 
-                    <label for="cpf_cnpj"> CpF / CnPJ </label>
-                    <input type="text" name="cpf_cnpj" id="cpf_cnpj" placeholder="cpf" required>
+                    <label for="cpf_cnpj"> cpf_cnpj </label>
+                    <input type="text" name="cpf_cnpj" id="cpf_cnpj" placeholder="cpf"/>
 
-                    <label for="email"> E-mAiL</label>
-                    <input type="text" name="email" id="email" placeholder="email" required>
+                    <label for="email"> E-mail</label>
+                    <input type="text" name="email" id="email" placeholder="email"/>
 
-                    <label for="password"> SeNhA</label>
-                    <input type="password" name="password" id="password" required>
+                    <label for="password"> Senha</label>
+                    <input type="password" name="password" id="password" autocomplete="on"/>
 
-                    <label for="birthday"> DaTa AnIvErSáRiO</label>
-                    <input type="date" name="birthday" id="birthday">
+                    <label for="birthday"> Data aniversário</label>
+                    <input type="date" name="birthday" id="birthday" autocomplete="birthday"/>
 
-                    <label for="terms"> TeRmO</label>
-                    <input type="checkbox" name="terms" id="terms" required>
+                    <label for="terms"> Termo</label>
+                    <input type="checkbox" name="terms" id="terms"/>
 
-                    <label for="cadastrar"></label>
-                    <input type="button" value="cadastrar" onclick="cadastrar()">
+                    
+                    <input type="button" value="cadastrar" onclick="cadastrar()"/>
           </form>
 
           <br><a href="index.html"> PaG PrInCiPaL </a> 
           <br><a href="log.html"> LoGiN </a> 
+</body>
 </html>
